# rustbox

./: .editorconfig  .gitignore  .hgignore  Cargo.toml  README.md  config.toml
src/: config.rs  core.rs  err.rs  main.rs
supporting/: writeout.py
