[package]
name = "jardin"
version = "0.1.0"
authors = ["Holger Peters <holger.peters@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.123"
toml = "*"

parquet = "3.0.0"
rust-s3 = "0.26.4"

# tokio = { version = "1", features = ["full"] }
# Cli
structopt = "*"
anyhow = "*"

# Logging
slog = "2.7.0"
slog-term = "2.6.0"
slog-async = "2.6.0"
build_id = "0.2.1"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.6"
tempfile = "3.2.0"

[profile.release]
# Panics should only be caused by logic errors and are considered bugs
panic = 'abort'
# Link time Optimization
lto = true
